# btrader

./: Cargo.toml  README.md
docker/: Dockerfile
src/: calculation_cluster.rs  config.rs  depth_cache.rs  main.rs  telegram.rs  trader.rs  trading_pair.rs  triangular_relationship.rs
tests/: test_config.rs  test_trading_pair.rs  test_triangular_relationship.rs
