[package]
name = "btrader"
version = "0.2.0"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
edition = "2021"
description = "Arbitrage trading bot"
homepage = "https://github.com/tqtensor/btrader"
repository = "https://github.com/tqtensor/btrader"
license = "GPL-3.0"
keywords = ["bot", "algotrading", "cryptocurrencies", "arbitrage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exchange = { git = "https://github.com/tqtensor/exchange-rs" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
rayon = "1.5"
indicatif = "0.16"
console = "0.15"
telegram-bot = "0.8"
futures = "0.3"
tokio = { version = "1.16", features = ["macros", "io-util"] }

[lib]
name = "btrader"
path = "src/lib.rs"
